Bug 384081 - Vector markers start-end line styles not loaded on Windows and macOS
Summary: Vector markers start-end line styles not loaded on Windows and macOS
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: 4.0.3
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-27 17:09 UTC by Pablo
Modified: 2018-11-20 08:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of line with a different style on macOS (465.91 KB, image/png)
2018-05-14 15:17 UTC, Halla Rempt
Details
screenshot of line without markers, dropdown shows no additional options (308.99 KB, image/png)
2018-05-14 16:38 UTC, Pablo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pablo 2017-08-27 17:09:00 UTC
When trying to set a different style (marker) for a vector path there is no other option than default straight line (it should show up arrows, points, etc).
Comment 1 wolthera 2017-08-27 17:22:04 UTC
Ah! This is fixed in the 4.0 testbuilds as 4.0 contains all the rewritten vector code. As such, it is best to close this.
Comment 2 Pablo 2017-08-27 22:31:29 UTC
(In reply to wolthera from comment #1)
> Ah! This is fixed in the 4.0 testbuilds as 4.0 contains all the rewritten
> vector code. As such, it is best to close this.
I guess you are right but I just wanted to add that it wasn't fixed in the pre-alphas build of mid June... At least in the macOS version...
Is there any new build for this OS where it should be fixed?

Thanks
Comment 3 Halla Rempt 2017-08-28 08:15:54 UTC
Actually, yes: https://files.kde.org/krita/4/osx/krita-4.0.0-prealpha.2.dmg -- I made that for testing another bug. It doesn't include scripting and g'mic, of course.
Comment 4 Pablo 2017-08-28 22:03:28 UTC
Thanks for the link, I have just tried it out and it still doesn't work... No dropdown markers for end, mid or end 
Did you expect it or it was supposed to be fixed in this prealpha2?
Comment 5 Pablo 2018-05-13 07:13:25 UTC
Hi,

I have just tested in 4.0.3 and, besides somebody has marked the issue as solved, it is still present in macOS builds... I don't know if it works in the rest of OS but it never worked in macOS.

Could anyone have a look a it again?
Thanks
Comment 6 Halla Rempt 2018-05-14 15:17:08 UTC
Created attachment 112644 [details]
screenshot of line with a different style on macOS

As you can see from this screenshot, it works fine on macOS. Please do not reopen bugs yourself: only developers should reopen bugs.
Comment 7 Pablo 2018-05-14 16:38:26 UTC
Created attachment 112647 [details]
screenshot of line without markers, dropdown shows no additional options

Hi Boudewijn,

First of all, receive my apologies about reopening the bug... I didn't know I wasn't allowed to do it.
Anyway, it's still not working: your screenshot doesn't prove the bug. Please find attached a new picture that shows that "markers" (line end or tip styles) are empty or not listed in the dropdown. As far as I'm concern it may list markers like arrows, points, etc...

Could you check it in your system?
Thanks and, again, sorry if I did something wrong, I just wanted to help
Comment 8 Dmitry Kazakov 2018-09-21 10:17:33 UTC
Hi, all!

I cannot reproduce the problem on Linux, it might be OSX-specific. We load the end-markers from an SVG file that is saved somewhere in the resources, so the bug is quite possible.

Pablo, could you check it with the latest builds of Krita 4.1.1? Do you still have this bug?

https://krita.org/en/download/krita-desktop/

If you still have a bug, please also try to reset the settings and resources folders using this instruction:

https://docs.krita.org/en/KritaFAQ.html#resetting-krita-configuration
Comment 9 Pablo 2018-09-29 15:12:35 UTC
Hi Dimitry,

I can confirm you the bug still persists in Krita 4.1.3, even reseting all configuratons files as you have suggested. I have tried it on Windows 10 and I also get the error...
Comment 10 Halla Rempt 2018-10-11 12:17:57 UTC
The problem is actually that the markers don't get loaded on macOS, not that the combobox is broken.
Comment 11 Pablo 2018-10-11 13:01:12 UTC
(In reply to Boudewijn Rempt from comment #10)
> The problem is actually that the markers don't get loaded on macOS, not that
> the combobox is broken.

That may be the reason but, remember, I have also tested it under Windows 10 and it happens the same...
Comment 12 Halla Rempt 2018-10-12 08:31:55 UTC
Git commit fa7e56774c4239f2955ce2f8840794902f42e921 by Boudewijn Rempt.
Committed on 12/10/2018 at 06:31.
Pushed by rempt into branch 'master'.

Fix loading svg marker ends on Windows and macOS

M  +1    -1    libs/flake/KoMarkerCollection.cpp
M  +1    -0    libs/ui/KisApplication.cpp

https://commits.kde.org/krita/fa7e56774c4239f2955ce2f8840794902f42e921
Comment 13 Halla Rempt 2018-11-20 08:48:22 UTC
Git commit ff1a057620c122960e9cfc8cf23efe285ba3e19b by Boudewijn Rempt.
Committed on 20/11/2018 at 08:20.
Pushed by rempt into branch 'krita/4.1'.

Fix loading svg marker ends on Windows and macOS

M  +1    -1    libs/flake/KoMarkerCollection.cpp
M  +1    -0    libs/ui/KisApplication.cpp

https://commits.kde.org/krita/ff1a057620c122960e9cfc8cf23efe285ba3e19b