Fix loading svg marker ends on Windows and macOS

BUG:384081